tests/paczka2/big_fuzzy/74368634.err
Error in line 3: A217 A217 43,8
Error in line 9: Dh1plOD S790 13,8
Error in line 10: Dh1plOD A872 14,6
Error in line 16: xMubxTDIj7 S119 30,0
Error in line 17: xMubxTDIj7 S790 31,0
Error in line 20: hEtrWnWaE S119 24,2
Error in line 30: xMubxTDIj7 A87 17,8
Error in line 35: xMubxTDIj7 S119 3,6
Error in line 44: SQ8z S790 18,1
Error in line 50: Dh1plOD A872 20,0
Error in line 40: dN7UB8zn S790 25,3
Error in line 54: dN7UB8zn A217 99,1
Error in line 63: SQ8z A217 98,2
Error in line 69: 7dcJScSS A217 94,3
Error in line 70: Dh1plOD A872 0,1
Error in line 68: SQ8z S119 39,7
Error in line 64: dN7UB8zn S790 370,0
Error in line 92: A217 A872 18,2
Error in line 93: A217 A217 80,5
Error in line 91: xMubxTDIj7 A217 42,3
Error in line 103: hEtrWnWaE S790 25,16
Error in line 99: Dh1plOD A872 23,7
Error in line 100: hEtrWnWaE S790 61,0
Error in line 113: 7dcJScSS A217 89,9
Error in line 125: dN7UB8zn S119 -1,3
Error in line 124: dN7UB8zn S119 17,3
Error in line 120: SQ8z A872 0,1
Error in line 139: SQ8z S119 -3,4
Error in line 135: dN7UB8zn A872 21,8
Error in line 132: 7dcJScSS S790 125,2
Error in line 140: xMubxTDIj7 S794 44,2
Error in line 151: A217 S119 89,6
Error in line 149: dN7UB8zn A217 0,9
Error in line 148: xMubxTDIj7 A872 85,6
Error in line 147: hEtrWnWaE A217 21,4
Error in line 159: A217 A217 92,5
Error in line 167: xMubxTDIj7 S119 4,3
Error in line 136: SQ8z S119 85,8
Error in line 166: hEtrWnWaE A872 35,7
Error in line 192: hEtrWnWaE S790 61,4
Error in line 200: 7dcJScSS S119 22,05
Error in line 197: xMubxTDIj7 S119 57,4
Error in line 177: 7dcJScSS S790 45,7
Error in line 199: Dh1plOD S119 65,0
Error in line 205: Dh1plOD A217 71,2
Error in line 210: Dh1plOD A872 32,9
Error in line 211: dN7UB8zn A217 72,4
Error in line 218: dN7UB8zn A872 15,6
Error in line 236: dN7UB8zn A217 49,4
Error in line 228: xMubxTDIj7 S119 42,7
Error in line 238: xMubxTDIj7 A217 36,8
Error in line 244: hEtrWnWaE A872 77,2
